syntax = "proto3";

package adder;

service Adder {
  rpc Add(AddRequest) returns (AddResponse);
  rpc Echo(EchoRequest) returns (EchoResponse);
  rpc Generate(GenerateRequest) returns (stream Number);
}

message AddRequest {
  int32 a = 1;
  int32 b = 2;
}

message AddResponse {
  int32 result = 1;
}

message EchoRequest {
  bytes data = 1;
}

message EchoResponse {
  bytes data = 1;
}

message GenerateRequest {
  int32 count = 1;
}

message Number {
  int32 value = 1;
}
